--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,17 @@
   pointer-events: none;
   height: 0;
 }
+
+.my-blockquote {
+  padding: 2px 0;
+  padding-left: 20px;
+  border-left: 5px solid gray;
+}
+
+.tiptap {
+  padding: 20px;
+}
+
+.ProseMirror-focused {
+  border: 0;
+}
